# IAM_Multi_Agents_Classifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  evaluate.py  generate_policies.py  generate_presentation_materials.py  main.py  pyproject.toml  requirements.txt  run_ui.py
app/: config.py
app/agents/: __init__.py  base_agent.py  compliance_agent.py  data_exposure_agent.py  judge_agent.py  least_privilege_agent.py  privilege_escalation_agent.py
app/llm/: __init__.py  llm_interface.py  ollama_client.py  openai_client.py
app/models/: __init__.py  enums.py  schemas.py
app/orchestrator/: __init__.py  analysis_orchestrator.py
app/parser/: __init__.py  policy_features.py  policy_parser.py
app/ui/: __init__.py  streamlit_app.py
app/utils/: __init__.py  json_extractor.py  logging_config.py
docs/: architecture.md
example_policies/: policy10.json  policy11.json  policy12.json  policy2.json  policy3.json  policy5.json  policy6.json  policy7.json  policy8.json  policy9.json
tests/: __init__.py  test_agent_quick.py  test_all_agents.py  test_judge.py  test_orchestrator.py  test_parser_quick.py
