[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iam-policy-analyzer"
version = "1.0.0"
description = "Multi-agent LLM system for AWS IAM policy security analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["aws", "iam", "security", "llm", "openai", "policy-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "openai>=1.10.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "httpx>=0.26.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
]
ollama = [
    "ollama>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/iam-policy-analyzer"
Repository = "https://github.com/YOUR_USERNAME/iam-policy-analyzer"
Issues = "https://github.com/YOUR_USERNAME/iam-policy-analyzer/issues"

[project.scripts]
iam-analyzer = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
